Moved fundamental UIElement CSS properties into Xamzor.css, fixed: Xamzor pages were completely broken in Firefox due to "max-width/height: 100%" (certain scenarios still don't work), fixed: Image was taking too much space in Chrome and Firefox, fixed: ScrollViewer bottom and right padding weren't honored

--- a/Xamzor/content/Xamzor.css
+++ b/Xamzor/content/Xamzor.css
@@ -4,6 +4,26 @@
     overflow: hidden; /* prevents overscrolling */
 }
 
+.UIElement {
+    display: grid;
+    overflow: hidden;
+    position: relative; /* fixes element stacking (z-index) issues */
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+}
+
+.UIElement.Image {
+    justify-self: stretch !important;
+    align-self: stretch !important;
+    width: initial !important;
+    height: initial !important;
+    min-width: initial !important;
+    min-height: initial !important;
+    max-width: initial !important;
+    max-height: initial !important;
+    background-repeat: no-repeat;
+}
+
 .XButton {
     background: none;
     border: none;
